Fixing flake8 issues

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,7 +9,6 @@ flake8-ignore =
     sickbeard/classes.py D100 D101 D102 D105 N802 N803
     sickbeard/common.py D101 D102 D105 D200 D202 D204 D205 D400 D401 E501 N802 N812
     sickbeard/config.py D100 D101 D103 D200 D202 D205 D210 D400 D401 E501 N802 N803 N806
-    sickbeard/dailysearcher.py D100 D102 D200 D400 D401
     sickbeard/databases/cache_db.py D100 D101 D102 E501
     sickbeard/databases/failed_db.py D100 D101 D102 D400 E501
     sickbeard/databases/__init__.py D104
@@ -29,7 +28,6 @@ flake8-ignore =
     sickbeard/indexers/indexer_exceptions.py D400 E501
     sickbeard/indexers/__init__.py D104 F401
     sickbeard/__init__.py D103 D104 E501 F401 F841 N802 N803 N806
-    sickbeard/manual_search.py D100 D200 D202 D205 D210 D400 D401 E501 F401 N802
     sickbeard/metadata/generic.py D100 D102 D200 D202 D205 D400 D401 E302 E501 N802 N806
     sickbeard/metadata/helpers.py D100 D103 N802 N803 N806
     sickbeard/metadata/__init__.py D104 N802
@@ -70,7 +68,6 @@ flake8-ignore =
     sickbeard/nzbSplitter.py D100 D202 D400 E501
     sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 N802 N803 N806
     sickbeard/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 N802 N803 N806
-    sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401 N802 N812
     sickbeard/providers/__init__.py D104 F401 N802
     sickbeard/providers/nzb/anizb.py D100 D102 D400
     sickbeard/providers/nzb/binsearch.py D100 D101 D102 D202 D204 D400 D401 N802
@@ -139,9 +136,13 @@ flake8-ignore =
     sickbeard/scene_exceptions.py D100
     sickbeard/scene_numbering.py D100 D200 D205 D400 D401 E501 N803 N806
     sickbeard/scheduler.py D100 D101 D102 D200 D205 D400 D401 E501 N802 N803
-    sickbeard/searchBacklog.py D100 D101 D102 E501 N802 N803 N806
-    sickbeard/search.py D100 D202 D401 E501 F401 F821 N802 N803 N806 N812
-    sickbeard/search_queue.py D100 D101 D102 D103 D200 D204 D205 D210 D400 D401 E231 E501 N803
+    sickbeard/search/__init__.py D104
+    sickbeard/search/backlog.py D100 D101 D102 E501 N802 N803 N806
+    sickbeard/search/daily.py D100 D102 D200 D400 D401
+    sickbeard/search/core.py D100 D202 D401 E501 F401 F821 N802 N803 N806 N812
+    sickbeard/search/manual.py D100 D200 D202 D205 D210 D400 D401 E501 F401 N802
+    sickbeard/search/proper.py D100 D101 D102 D200 D202 D400 E501 F401 N802 N812
+    sickbeard/search/queue.py D100 D101 D102 D103 D200 D204 D205 D210 D400 D401 E231 E501 N803
     sickbeard/server/api/__init__.py D104
     sickbeard/server/api/v1/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 N801
     sickbeard/server/api/v1/__init__.py D104
