--- a/pytest.ini
+++ b/pytest.ini
@@ -86,7 +86,7 @@ flake8-ignore =
     sickbeard/providers/torrent/html/cpasbien.py D100 D102 D204 D400 E501
     sickbeard/providers/torrent/html/danishbits.py D100 D102 D204 D400
     sickbeard/providers/torrent/html/elitetorrent.py D100 D102 D202 D204 D400 E501 N801
-    sickbeard/providers/torrent/html/extratorrent.py D100 D102
+    sickbeard/providers/torrent/html/extratorrent.py D100
     sickbeard/providers/torrent/html/freshontv.py D100 D102 D202 D204 D400 E501
     sickbeard/providers/torrent/html/gftracker.py D100 D101 D102 D400
     sickbeard/providers/torrent/html/hdspace.py D100 D102 D202 D204 D400
