--- a/pytest.ini
+++ b/pytest.ini
@@ -173,7 +173,7 @@ flake8-ignore =
     sickbeard/server/web/home/news.py D100 D101 D102 E501
     sickbeard/server/web/home/post_process.py D100 D101 D102 E501 N802 N803
     sickbeard/server/web/__init__.py D104 F401
-    sickbeard/server/web/manage/handler.py D100 D101 D102 D205 E126 E501 F401 N802 N803
+    sickbeard/server/web/manage/handler.py D100 D101 D102 D205 E126 E501 F401 N802 N803 N806
     sickbeard/server/web/manage/__init__.py D104 F401
     sickbeard/server/web/manage/searches.py D100 D101 D102 N802
     sickbeard/show_name_helpers.py D100 D200 D202 D205 D400 D401 E231 E501 N802 N803 N806
