--- a/pytest.ini
+++ b/pytest.ini
@@ -215,47 +215,47 @@ flake8-ignore =
     medusa/system/Shutdown.py D100 D101 D102
     medusa/tagger/episode.py D102 D200 D204 D205 D400 W291 W293
     medusa/tagger/__init__.py D104
-    tests/api_v1_tests.py D200 D204 D205 D400
-    tests/common_tests.py D200 D204 D400 E402
-    tests/config_tests.py D200 D204 D400 E402 E501 I100
-    tests/db_tests.py D200 D204 D400 E402
-    tests/encoding_tests.py D100 D200 D204 D400 E402 I100
-    tests/exceptions_helper_tests.py D200 D205 D400 E402 E501
-    tests/feedparser_tests.py D100 D200 D204 D400 E402
-    tests/helpers_tests.py D200 D204 D205 D400 E402
+    tests/legacy/api_v1_tests.py D200 D204 D205 D400
+    tests/legacy/common_tests.py D200 D204 D400 E402
+    tests/legacy/config_tests.py D200 D204 D400 E402 E501 I100
+    tests/legacy/db_tests.py D200 D204 D400 E402
+    tests/legacy/encoding_tests.py D100 D200 D204 D400 E402 I100
+    tests/legacy/exceptions_helper_tests.py D200 D205 D400 E402 E501
+    tests/legacy/feedparser_tests.py D100 D200 D204 D400 E402
+    tests/legacy/helpers_tests.py D200 D204 D205 D400 E402
     tests/__init__.py D104 E402
-    tests/issue_submitter_tests.py D100 D200 D204 D400 E402 I101
-    tests/notifier_tests.py D200 D204 D400 E402 E501 I100
-    tests/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
-    tests/pp_tests.py D100 D200 D204 D400 E402 I100
+    tests/legacy/issue_submitter_tests.py D100 D200 D204 D400 E402 I101
+    tests/legacy/notifier_tests.py D200 D204 D400 E402 E501 I100
+    tests/legacy/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
+    tests/legacy/pp_tests.py D100 D200 D204 D400 E402 I100
     tests/*.py D101 D102 D103
     tests/report_guessit.py E402
-    tests/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I100 I101
-    tests/search_tests.py D100 D200 D202 D204 D400 E402 I100
-    tests/sickrage_tests/helper/common_tests.py D200 D400 E402 E501 I100 I101
-    tests/sickrage_tests/helper/__init__.py D200 D400
-    tests/sickrage_tests/helper/quality_tests.py D200 D204 D400 E402 I100
-    tests/sickrage_tests/__init__.py D200 D400 I100
-    tests/sickrage_tests/media/generic_media_tests.py D200 D202 D400 E402 I100
-    tests/sickrage_tests/media/__init__.py D200 D400
-    tests/sickrage_tests/media/show_banner_tests.py D200 D202 D400 E402 I100
-    tests/sickrage_tests/media/show_fan_art_tests.py D200 D202 D400 E402 I100
-    tests/sickrage_tests/media/show_network_logo_tests.py D200 D202 D400 E402 I100
-    tests/sickrage_tests/media/show_poster_tests.py D200 D202 D400 E402 I100
-    tests/sickrage_tests/providers/generic_provider_tests.py D200 D400 E303 E402 I100 I101
-    tests/sickrage_tests/providers/__init__.py D200 D400
-    tests/sickrage_tests/providers/nzb_provider_tests.py D200 D400 E402 I100
-    tests/sickrage_tests/providers/torrent_provider_tests.py D200 D400 E402 I100
-    tests/sickrage_tests/show/coming_episodes_tests.py D200 D204 D400 E402 E501 I100
-    tests/sickrage_tests/show/history_tests.py D200 D204 D400 E402 I100
-    tests/sickrage_tests/show/__init__.py D200 D400
-    tests/sickrage_tests/show/show_tests.py D200 D400 E402 E501 I100
-    tests/sickrage_tests/system/__init__.py D200 D400
-    tests/sickrage_tests/system/restart_tests.py D200 D204 D400 E402 I100
-    tests/sickrage_tests/system/shutdown_tests.py D200 D204 D400 E402 I100
-    tests/snatch_tests.py D200 D202 D400 E402 E501 F841 I100
-    tests/ssl_sni_tests.py D100 D205 D400 E402 I100
-    tests/test_lib.py D200 D204 E402 E501 F841 I100
-    tests/torrent_tests.py D100 D200 D204 D400 E402 E501 F841 I100
-    tests/tv_tests.py D200 D204 D400 D403 E402 I100
-    tests/xem_tests.py D200 D202 D400 D401 E402 I100
+    tests/legacy/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I100 I101
+    tests/legacy/search_tests.py D100 D200 D202 D204 D400 E402 I100
+    tests/legacy/helper/common_tests.py D200 D400 E402 E501 I100 I101
+    tests/legacy/helper/__init__.py D200 D400
+    tests/legacy/helper/quality_tests.py D200 D204 D400 E402 I100
+    tests/legacy/__init__.py D200 D400 I100
+    tests/legacy/media/generic_media_tests.py D200 D202 D400 E402 I100
+    tests/legacy/media/__init__.py D200 D400
+    tests/legacy/media/show_banner_tests.py D200 D202 D400 E402 I100
+    tests/legacy/media/show_fan_art_tests.py D200 D202 D400 E402 I100
+    tests/legacy/media/show_network_logo_tests.py D200 D202 D400 E402 I100
+    tests/legacy/media/show_poster_tests.py D200 D202 D400 E402 I100
+    tests/legacy/providers/generic_provider_tests.py D200 D400 E303 E402 I100 I101
+    tests/legacy/providers/__init__.py D200 D400
+    tests/legacy/providers/nzb_provider_tests.py D200 D400 E402 I100
+    tests/legacy/providers/torrent_provider_tests.py D200 D400 E402 I100
+    tests/legacy/show/coming_episodes_tests.py D200 D204 D400 E402 E501 I100
+    tests/legacy/show/history_tests.py D200 D204 D400 E402 I100
+    tests/legacy/show/__init__.py D200 D400
+    tests/legacy/show/show_tests.py D200 D400 E402 E501 I100
+    tests/legacy/system/__init__.py D200 D400
+    tests/legacy/system/restart_tests.py D200 D204 D400 E402 I100
+    tests/legacy/system/shutdown_tests.py D200 D204 D400 E402 I100
+    tests/legacy/snatch_tests.py D200 D202 D400 E402 E501 F841 I100
+    tests/legacy/ssl_sni_tests.py D100 D205 D400 E402 I100
+    tests/legacy/test_lib.py D200 D204 E402 E501 F841 I100
+    tests/legacy/torrent_tests.py D100 D200 D204 D400 E402 E501 F841 I100
+    tests/legacy/tv_tests.py D200 D204 D400 D403 E402 I100
+    tests/legacy/xem_tests.py D200 D202 D400 D401 E402 I100
