Compare minor version

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ flake8-ignore =
     medusa/databases/cache_db.py D100 D101 D102 E501
     medusa/databases/failed_db.py D100 D101 D102 D400 E501
     medusa/databases/__init__.py D104
-    medusa/databases/main_db.py D100 D101 D102 D103 D200 D202 D204 D210 D400 D401 E501 E502 N802 N806
+    medusa/databases/main_db.py D100 D101 D102 D103 D200 D202 D204 D210 D400 D401 E501 E502 F401 N802 N806
     medusa/databases/mainDB.py D205 D400
     medusa/db.py D100 D101 D102 D103 D202 D205 D400 D401 D403 E501 E731 N802 N803 N806
     medusa/event_queue.py D100 D101 D102 D200 D202 D400 D401
