--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     mock
 
 commands =
-    py.test -p no:cov -p no:unittest --flake8 {posargs}
+    # py.test -p no:cov -p no:unittest --flake8 {posargs}
     py.test -p no:flake8 --cov-report term --cov-report html --cov=medusa {posargs}
 
 [flake8]
