Fix flake tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envdir = {toxworkdir}/tox
 deps =
     flake8_docstrings
     flake8-import-order
+    pydocstyle!=1.1.0
     pep8-naming
     pytest
     pytest-cov
@@ -16,7 +17,7 @@ deps =
     mock
 
 commands =
-    # py.test -p no:cov -p no:unittest --flake8 {posargs}
+    py.test -p no:cov -p no:unittest --flake8 {posargs}
     py.test -p no:flake8 --cov-report term --cov-report html --cov=medusa {posargs}
 
 [flake8]
