--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ branches:
 env:
 - TRAVIS_NODE_VERSION="5.0.0"
 before_install:
-- rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm
-  && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm
-  install $TRAVIS_NODE_VERSION
-- npm install -g grunt-cli
-- npm install -g bower
-- cd .build && cp ../package.json . && npm install --quiet && bower install && cd ..
+#- rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm
+#  && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm
+#  install $TRAVIS_NODE_VERSION
+#- npm install -g grunt-cli
+#- npm install -g bower
+#- cd .build && cp ../package.json . && npm install --quiet && bower install && cd ..
 install:
 - pip install --upgrade pip
 - pip install --upgrade tox
