--- a/.build/bower.json
+++ b/.build/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa",
+  "name": "Medusa",
   "private": true,
   "ignore": [
     "**/.*",
@@ -9,26 +9,25 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "bootstrap": "~3.3.5",
-    "bootstrap-hover-dropdown": "~2.1.3",
-    "jquery-ui": "~1.11.4",
-    "jquery-timeago": "~1.4.3",
-    "jquery-tokeninput": "~1.7.0",
-    "bootstrap3-typeahead": "~3.1.1",
-    "underscore": "~1.8.3",
+    "jquery": "3.0.0",
+    "bootstrap": "3.3.7",
+    "underscore": "^1.8.3",
+    "bootstrap-hover-dropdown": "2.2.1",
+    "jquery-ui": "1.12.1",
+    "jquery-tokeninput": "^1.7.0",
+    "bootstrap3-typeahead": "4.0.2",
     "jqueryui-touch-punch": "*",
-    "pnotify": "~2.1.0",
-    "qtip2": "~2.2.1",
-    "tablesorter": "jquery.tablesorter#~2.24.5",
-    "jquery-confirm": "~2.5.2",
-    "bootstrap-formhelpers": "~2.3.0",
-    "isotope": "~2.2.2",
+    "pnotify": "2.1.0",
+    "qtip2": "2.2.1",
+    "tablesorter": "jquery.tablesorter#2.24.5",
+    "jquery-confirm": "2.5.2",
+    "bootstrap-formhelpers": "2.3.0",
+    "isotope": "3.0.1",
     "openSans": "https://google-fonts.azurewebsites.net/googleFonts/openSans?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic",
     "jquery-backstretch-2": "^2.1.13"
   },
   "resolutions": {
-    "bootstrap": "~3.3.5",
-    "jquery": "~2.1.4"
+    "bootstrap": "3.3.7",
+    "jquery": "2.1.4"
   }
 }
