--- a/pytest.ini
+++ b/pytest.ini
@@ -87,7 +87,7 @@ flake8-ignore =
     medusa/providers/torrent/html/extratorrent.py D100
     medusa/providers/torrent/html/freshontv.py D100 D102 D202 D204 D400 E501
     medusa/providers/torrent/html/gftracker.py D100 D101 D102 D400
-    medusa/providers/torrent/html/hdspace.py D100 D102 D202 D204 D400
+    medusa/providers/torrent/html/hdspace.py D100
     medusa/providers/torrent/html/hdtorrents.py D100 D102 D202 D204 D400 E501
     medusa/providers/torrent/html/hounddawgs.py D100 D102 D202 D204 D400
     medusa/providers/torrent/html/ilovetorrents.py D100 D102 D202 D204 D400
