--- a/pytest.ini
+++ b/pytest.ini
@@ -105,6 +105,7 @@ flake8-ignore =
     medusa/providers/torrent/html/tokyotoshokan.py D100 D102 D202 D204 D400
     medusa/providers/torrent/html/torrentbytes.py D100 D102 D202 D204 D400 E501
     medusa/providers/torrent/html/torrentleech.py D100 D102 D204 D400
+    medusa/providers/torrent/html/torrentproject.py D100
     medusa/providers/torrent/html/torrentshack.py D100 D102 D204 D400
     medusa/providers/torrent/html/transmitthenet.py D100 D102 D202 D204 D400
     medusa/providers/torrent/html/tvchaosuk.py D100 D102 D204 D400 E501
@@ -121,7 +122,6 @@ flake8-ignore =
     medusa/providers/torrent/json/rarbg.py D100 D102 E501
     medusa/providers/torrent/json/t411.py D100 D102 D202 D204 D400 E501
     medusa/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400
-    medusa/providers/torrent/json/torrentproject.py D100 D102 D202 D204 D400
     medusa/providers/torrent/rss/__init__.py D104
     medusa/providers/torrent/rss/nyaatorrents.py D100 D101 D102 D202 D400 E501
     medusa/providers/torrent/rss/rsstorrent.py D100 D101 D102 E501 N802 N803
