--- a/pytest.ini
+++ b/pytest.ini
@@ -32,7 +32,7 @@ flake8-ignore =
     medusa/indexers/tvmaze/tvmaze_api.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 F841 N802 N803 N806
     medusa/indexers/tvmaze/tvmaze_exceptions.py D200 D204 D205 D400 N801
     medusa/indexers/tvmaze/tvmaze_ui.py D102 D103 D200 D204 D400 E128 E251 E302 E261 N802 N803
-    medusa/indexers/tvdbv2/tvdbv2_api.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 F841 N802 N803 N806
+    medusa/indexers/tvdbv2/tvdbv2_api.py D100 E711
     medusa/indexers/tvdbv2/tvdbv2_exceptions.py D200 D204 D205 D400 N801
     medusa/indexers/tvdbv2/tvdbv2_ui.py D102 D103 D200 D204 D400 E302 E128 E251 E261 N802 N803
     medusa/indexers/tvdbv2/__init__.py D104
