Refactor showUpdater.py -> show_updater.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -186,7 +186,7 @@ flake8-ignore =
     medusa/server/web/manage/searches.py D100 D101 D102 N802
     medusa/show_name_helpers.py D100 D200 D202 D205 D400 D401 E231 E501 N802 N803 N806
     medusa/show_queue.py D100 D101 D102 D205 D400 D401 E501 N802 N803 N806
-    medusa/showUpdater.py D100 D101 D102 D105 E251 E302 E501 F401
+    medusa/show_updater.py D100 D101 D102 D105 E251 E302 E501 F401
     medusa/trakt_checker.py D100 D101 D102 D200 D202 D205 D208 D400 D401 E261 E303 E501 N802 N803 N806
     medusa/tv_cache.py D100 D101 D102 D200 D205 D400 D401 E501 F401 N802 N803 N806
     medusa/ui.py D100 D101 D102 D200 D202 D204 D205 D400 D401 E501 N802 N803 N806
