--- a/pytest.ini
+++ b/pytest.ini
@@ -76,7 +76,7 @@ flake8-ignore =
     medusa/nzbget.py D100 D400 D401 E501 N802 N806
     medusa/nzbSplitter.py D100 D202 D400 E501
     medusa/postProcessor.py D100 D205 D400 N802
-    medusa/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 N802 N803 N806
+    medusa/process_tv.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 N802 N803 N806
     medusa/providers/__init__.py D104 F401 N802
     medusa/providers/nzb/anizb.py D100 D102 D400
     medusa/providers/nzb/binsearch.py D100 D101 D102 D202 D204 D400 D401 N802
