--- a/pytest.ini
+++ b/pytest.ini
@@ -84,7 +84,7 @@ flake8-ignore =
     medusa/nzbSplitter.py D100 D202 D400
     medusa/nzbget.py D100 D400 D401 N802 N806
     medusa/postProcessor.py D100 D205 D400 N802
-    medusa/processTV.py D100 D101 D102 D103 D202 D400 E265 N802 N803 N806
+    medusa/process_tv.py D100 D101 D102 D103 D202 D400 E265 N802 N803 N806
     medusa/providers/GenericProvider.py D100 D101 D102 D202 D205 D400 D401
     medusa/providers/__init__.py D104 F401 N802
     medusa/providers/exceptions.py D200 D400
