Refactor nzbSplitter.py -> nzb_splitter.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -81,7 +81,7 @@ flake8-ignore =
     medusa/notifiers/trakt.py D100 D102 D200 D201 D202 D205 D400 D401 N806
     medusa/notifiers/tweet.py D100 D101 D102 N802
     medusa/numdict.py D102 D105 D200 D205 D400 D401
-    medusa/nzbSplitter.py D100 D202 D400
+    medusa/nzb_splitter.py D100 D202 D400
     medusa/nzbget.py D100 D400 D401 N802 N806
     medusa/post_processor.py D100 D205 D400 N802
     medusa/process_tv.py D100 D101 D102 D103 D202 D400 E265 N802 N803 N806
