--- a/pytest.ini
+++ b/pytest.ini
@@ -74,7 +74,7 @@ flake8-ignore =
     medusa/notifiers/tweet.py D100 D101 D102 E501 F401 F841 N802
     medusa/numdict.py D102 D105 D200 D205 D400 D401
     medusa/nzbget.py D100 D400 D401 E501 N802 N806
-    medusa/nzbSplitter.py D100 D202 D400 E501
+    medusa/nzb_splitter.py D100 D202 D400 E501
     medusa/post_processor.py D100 D205 D400 N802
     medusa/process_tv.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 N802 N803 N806
     medusa/providers/__init__.py D104 F401 N802
