Refactor imdbPopular.py -> imdb_popular.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,7 +26,7 @@ flake8-ignore =
     medusa/helpers.py D103 N802 N803 N806
     medusa/history.py D100 D400 N802 N803 N806
     medusa/image_cache.py D100 D101 D102 D105 D200 D202 D205 D400 D401 E501
-    medusa/imdbPopular.py D100
+    medusa/imdb_popular.py D100
     medusa/indexers/__init__.py D104 F401
     medusa/indexers/indexer_api.py D100 D101 D102 D105 N801
     medusa/indexers/indexer_config.py D100
