Refactor imdbPopular.py -> imdb_popular.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,7 +23,7 @@ flake8-ignore =
     medusa/helpers.py D103 E501 N802 N803 N806
     medusa/history.py D100 D400 E501 N802 N803 N806
     medusa/image_cache.py D100 D101 D102 D105 D200 D202 D205 D400 D401 E501
-    medusa/imdbPopular.py D100 E501
+    medusa/imdb_popular.py D100 E501
     medusa/indexers/indexer_api.py D100 D101 D102 D105 E501 N801 N803
     medusa/indexers/indexer_config.py D100
     medusa/indexers/indexer_exceptions.py D400 E501
