Refactor failedProcessor.py -> failed_processor.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,7 +18,7 @@ flake8-ignore =
     medusa/db.py D100 D101 D102 D103 D202 D205 D400 D401 D403 E501 E731 N802 N803 N806
     medusa/event_queue.py D100 D101 D102 D200 D202 D400 D401
     medusa/failed_history.py D100 D103 D202 D205 D400 D401 E501 N802 N803 N806
-    medusa/failedProcessor.py D100 D205 D400 N803 N806
+    medusa/failed_processor.py D100 D205 D400 N803 N806
     medusa/generic_queue.py D100 D101 D102 D200 D202 D400 D401
     medusa/helpers.py D103 E501 N802 N803 N806
     medusa/history.py D100 D400 E501 N802 N803 N806
