--- a/pytest.ini
+++ b/pytest.ini
@@ -15,7 +15,7 @@ flake8-ignore =
     medusa/databases/main_db.py D100 D101 D102 D103 D200 D204 D400 D401 E501 E502 F401 N802 N806
     medusa/db.py D100 D101 D102 D103 D202 D205 D400 D401 D403 E731 N802 N803 N806
     medusa/event_queue.py D100 D101 D102 D200 D202 D400 D401
-    medusa/failedProcessor.py D100 D205 D400 N803 N806
+    medusa/failed_processor.py D100 D205 D400 N803 N806
     medusa/failed_history.py D100 D103 D202 D205 D400 D401 N802 N803 N806
     medusa/generic_queue.py D100 D101 D102 D200 D202 D400 D401
     medusa/helper/__init__.py D104
