--- a/pytest.ini
+++ b/pytest.ini
@@ -218,7 +218,7 @@ flake8-ignore =
     medusa/show/recommendations/trakt.py D100
     medusa/show/Show.py D100 D101 D102 D202 D205 D400
     medusa/system/__init__.py D104
-    medusa/system/Restart.py D100 D101 D102
+    medusa/system/restart.py D100 D101 D102
     medusa/system/shutdown.py D100 D101 D102
     medusa/tagger/episode.py D102 D200 D204 D205 D400 W291 W293
     medusa/tagger/__init__.py D104
