Refactor Show.py -> show.py
Refactor Show.py -> show.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -216,7 +216,7 @@ flake8-ignore =
     medusa/show/recommendations/__init__.py D104
     medusa/show/recommendations/recommended.py D100 D200 D204 D400
     medusa/show/recommendations/trakt.py D100
-    medusa/show/Show.py D100 D101 D102 D202 D205 D400
+    medusa/show/show.py D100 D101 D102 D202 D205 D400
     medusa/system/__init__.py D104
     medusa/system/restart.py D100 D101 D102
     medusa/system/shutdown.py D100 D101 D102
