Refactor ShowPoster.py -> poster.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -201,7 +201,7 @@ flake8-ignore =
     medusa/media/ShowBanner.py D100 D102 D200 D400
     medusa/media/ShowFanArt.py D100 D102 D200 D400
     medusa/media/ShowNetworkLogo.py D100 D102 D200 D400
-    medusa/media/ShowPoster.py D100 D102 D200 D400
+    medusa/media/poster.py D100 D102 D200 D400
     medusa/providers/exceptions.py D200 D400
     medusa/providers/generic_provider.py D100 D101 D102 D202 D205 D400 D401 E501 F841
     medusa/providers/nzb/nzb_provider.py D100 D101 D102 D200 F401
