--- a/pytest.ini
+++ b/pytest.ini
@@ -198,7 +198,7 @@ flake8-ignore =
     medusa/helper/quality.py D100 D202 D205 D400
     medusa/media/GenericMedia.py D100 D101 D200 D202 D205 D400
     medusa/media/__init__.py D104
-    medusa/media/ShowBanner.py D100 D102 D200 D400
+    medusa/media/banner.py D100 D102 D200 D400
     medusa/media/fan_art.py D100 D102 D200 D400
     medusa/media/network_logo.py D100 D102 D200 D400
     medusa/media/poster.py D100 D102 D200 D400
