Refactor GenericMedia.py -> generic.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -196,7 +196,7 @@ flake8-ignore =
     medusa/helper/exceptions.py D100 D200 D202 D205 D400
     medusa/helper/__init__.py D104
     medusa/helper/quality.py D100 D202 D205 D400
-    medusa/media/GenericMedia.py D100 D101 D200 D202 D205 D400
+    medusa/media/generic.py D100 D101 D200 D202 D205 D400
     medusa/media/__init__.py D104
     medusa/media/banner.py D100 D102 D200 D400
     medusa/media/fan_art.py D100 D102 D200 D400
