Adding apiv2 initial tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -219,4 +219,5 @@ flake8-ignore =
     start.py D102 D200 D400 D401 E402 E501
     tests/__init__.py D104
     tests/*.py D101 D102 D103
+    tests/*/*.py D101 D102 D103
     tests/report_guessit.py E402
