--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envdir = {toxworkdir}/tox
 deps =
     flake8_docstrings
     flake8-import-order
+    pycodestyle!=2.1.0
     pydocstyle!=1.1.0
     pep8-naming
     pytest
